--- a/app/views/payload_missing_error.erb
+++ b/app/views/payload_missing_error.erb
@@ -1,4 +1,3 @@
-<h1>Error Page</h1>
-<p>
-  Payload error page: Payload data is missing
-</p>
+<h1>Error!</h1>
+<h2>Payload error page: Payload data is missing.</h2>
+<p>Please <a href="#">submit a payload</a> first.</p>
